--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,41 @@
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Things I Want My Kids to Know - A Father's Advice
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: hings I Want My Kids to Know - A Father's Advice
 email: fuzzygroup@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Scott Johnson writing things for his kids.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-#DNS related change
-#url: "https://fuzzygroup.github.io" # the base hostname & protocol for your site
-url: "http://fuzzyblog.io/tiwmktk"
+  Scott Johnson writing things for his kids.   They won't listen but I'm still going to try.
+baseurl: "/tiwmktk" # the subpath of your site, e.g. /blog
+url: "https://fuzzyblog.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fuzzygroup
 github_username:  fuzzygroup
 
 # Build settings
 markdown: kramdown
-gems:
-- jekyll-sitemap
-- jekyll-seo-tag
+theme: minima
+plugins:
+  - jekyll-feed
 
-jekyll_plugins:
-
-exclude:
- - 'log'
- - 'tmp'
- - '.asset-cache'
- - '.bundle'
- - 'Gemfile'
- - CNAME
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
