--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Things I Want My Kids to Know - A Father's Advice
+title: "Things I Want My Kids to Know - A Father's Advice"
 email: fuzzygroup@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Scott Johnson writing things for his kids.   They won't listen but I'm still going to try.
 baseurl: "/tiwmktk" # the subpath of your site, e.g. /blog
-url: "https://fuzzyblog.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://fuzzyblog.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fuzzygroup
 github_username:  fuzzygroup
 
@@ -27,6 +27,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-lunr-js-search
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
